--- a/src/abstracts/config/_color.scss
+++ b/src/abstracts/config/_color.scss
@@ -1,4 +1,4 @@
-$dfr-config: deep-map-merge(
+$super-map: deep-map-merge(
   (
     'color': (
       'dark':         $dfr--base-color-dark,
@@ -8,6 +8,6 @@ $dfr-config: deep-map-merge(
       'light':        $dfr--base-color-light
     )
   ),
-  $dfr-config,
+  $super-map,
   true
 );
