--- a/src/abstracts/config/_font.scss
+++ b/src/abstracts/config/_font.scss
@@ -1,6 +1,6 @@
 // stylelint-disable value-keyword-case
 // stylelint-disable function-comma-newline-after
-$dfr-config: deep-map-merge(
+$super-map: deep-map-merge(
   (
     'font': (
       'family': (
@@ -22,7 +22,7 @@ $dfr-config: deep-map-merge(
       )
     )
   ),
-  $dfr-config,
+  $super-map,
   true
 );
 // stylelint-enable value-keyword-case
