--- a/src/abstracts/config/_heading.scss
+++ b/src/abstracts/config/_heading.scss
@@ -1,4 +1,4 @@
-$dfr-config: deep-map-merge(
+$super-map: deep-map-merge(
   (
     'heading': (
       'font': (
@@ -18,6 +18,6 @@ $dfr-config: deep-map-merge(
       )
     )
   ),
-  $dfr-config,
+  $super-map,
   true
 );
