--- a/src/abstracts/functions/_get.scss
+++ b/src/abstracts/functions/_get.scss
@@ -14,7 +14,7 @@
 //
 // @return Anything
 // ---------------------------------------------------------
-@function get ($key, $map: $dfr-config) {
+@function get ($key, $map: $super-map) {
   $keys: str-explode($key, '.');
 
   @if not deep-map-check($map, $keys...) {
