--- a/src/abstracts/mixins/_font-face.scss
+++ b/src/abstracts/mixins/_font-face.scss
@@ -1,3 +1,5 @@
+@use '../functions/' as *;
+
 // ---------------------------------------------------------
 // font-face
 // Improved and simplified use of `@font-face`(s)
