--- a/src/abstracts/mixins/_grid-generator.scss
+++ b/src/abstracts/mixins/_grid-generator.scss
@@ -1,3 +1,5 @@
+@use '../functions/' as *;
+
 // ---------------------------------------------------------
 // grid-generator
 // Helps to generate the grid easier and cleaner
