--- a/src/abstracts/mixins/_spacing.scss
+++ b/src/abstracts/mixins/_spacing.scss
@@ -1,3 +1,5 @@
+@use '../functions/' as *;
+
 // ---------------------------------------------------------
 // margin
 // Set predefined margin on an element
