--- a/src/abstracts/mixins/helpers/_button-sizes.scss
+++ b/src/abstracts/mixins/helpers/_button-sizes.scss
@@ -1,4 +1,7 @@
-@mixin button-sizes ($sizes) {
+@use '../../functions/' as *;
+@use '../spacing' as *;
+
+@mixin button-sizes($sizes) {
   @each $key, $value in $sizes {
     @if $key != 'm' {
       &.is-#{$key} {
