--- a/src/base/_index.scss
+++ b/src/base/_index.scss
@@ -1,8 +1,7 @@
-// Base
-@forward 'base/reset';
-@forward 'base/animations';
-@forward 'base/container';
-@forward 'base/grid';
-@forward 'base/helpers';
-@forward 'base/print';
-@forward 'base/typography';
+@forward 'reset';
+@forward 'animations';
+@forward 'container';
+@forward 'grid';
+@forward 'helpers';
+@forward 'print';
+@forward 'typography';
