--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/' as *;
+
 // stylelint-disable font-weight-notation
 %dfr-headings-common {
   font-weight: get('heading.font.weight');
