--- a/src/abstracts/config/_button.scss
+++ b/src/abstracts/config/_button.scss
@@ -1,4 +1,9 @@
-$super-map: deep-map-merge(
+@use '../functions/' as *;
+@use '../variables' as *;
+@use '../functions/helpers/' as *;
+@use 'map' as *;
+
+$dfr-config: deep-map-merge(
   (
     'spacing': (
       'button': (
@@ -25,6 +30,6 @@ $super-map: deep-map-merge(
       )
     )
   ),
-  $super-map,
+  $dfr-config,
   true
 );
