--- a/src/abstracts/config/_container.scss
+++ b/src/abstracts/config/_container.scss
@@ -1,4 +1,9 @@
-$super-map: deep-map-merge(
+@use '../functions/' as *;
+@use '../variables' as *;
+@use '../functions/helpers/' as *;
+@use 'map' as *;
+
+$dfr-config: deep-map-merge(
   (
     'container': (
       's':  510px,
@@ -7,6 +12,6 @@ $super-map: deep-map-merge(
       'xl': 1140px
     )
   ),
-  $super-map,
+  $dfr-config,
   true
 );
