--- a/src/abstracts/config/_heading.scss
+++ b/src/abstracts/config/_heading.scss
@@ -1,4 +1,9 @@
-$super-map: deep-map-merge(
+@use '../functions/' as *;
+@use '../variables' as *;
+@use '../functions/helpers/' as *;
+@use 'map' as *;
+
+$dfr-config: deep-map-merge(
   (
     'heading': (
       'font': (
@@ -18,6 +23,6 @@ $super-map: deep-map-merge(
       )
     )
   ),
-  $super-map,
+  $dfr-config,
   true
 );
