--- a/src/abstracts/mixins/_color.scss
+++ b/src/abstracts/mixins/_color.scss
@@ -1,3 +1,5 @@
+@use '../functions/' as *;
+
 // ---------------------------------------------------------
 // color
 // Set predefined background and text color
