--- a/src/abstracts/mixins/_media-queries.scss
+++ b/src/abstracts/mixins/_media-queries.scss
@@ -1,3 +1,5 @@
+@use '../functions/' as *;
+
 // ---------------------------------------------------------
 // media-min
 // Simplifies the use of `@media` queries
